@@ -1,3 +1,8 @@
+2014-07-22  gepr  <gepr@tempusdictum.com>
+
+	* glossary.html: Add biomimetic, biomimicry, biomimetic analog,
+	and physiomimetic.
+
 2014-07-15  gepr  <gepr@tempusdictum.com>
 
 	* glossary.html: Add "use case" and "usage pattern".
